--- a/index.html
+++ b/index.html
@@ -227,22 +227,22 @@
                 Preencha o formulário ao lado e entrarei em contato o mais rápido possível.</p>
 
             <form action="https://formsubmit.co/ajax/11c8702ee09bb86b0ffcded4f629c0eb" method="POST" data-form class="contact__form">
-                    <div class="contact__container">
-                        <input class="contact__input" type="text" name="name" id="name" data-name minlength="3" required>
-                        <label class="contact__label" for="name">Nome</label>
-                    </div>
-                    <div class="contact__container">
-                        <input class="contact__input" type="email" name="email" id="email" data-email minlength="6" required>
-                        <label class="contact__label" for="email">E-mail</label>
-                    </div>
-                    <div class="contact__container">
-                        <input class="contact__input" type="text" name="topic" id="topic" data-topic minlength="3" required>
-                        <label class="contact__label" for="topic">Assunto</label>
-                    </div>
-                    <div class="contact__container">
-                        <input class="contact__input" type="text" name="message" id="message" data-message minlength="10" required>
-                        <label class="contact__label" for="message">Mensagem</label>
-                    </div>
+                <div class="contact__container">
+                    <input class="contact__input" type="text" name="name" id="name" placeholder="nome" data-name required>
+                    <label class="contact__label" for="name">Nome</label>
+                </div>
+                <div class="contact__container">
+                    <input class="contact__input" type="email" name="email" id="email" placeholder="email" data-email required>
+                    <label class="contact__label" for="email">E-mail</label>
+                </div>
+                <div class="contact__container">
+                    <input class="contact__input" type="text" name="topic" id="topic" placeholder="assunto" data-topic required>
+                    <label class="contact__label" for="topic">Assunto</label>
+                </div>
+                <div class="contact__container">
+                    <input class="contact__input" type="text" name="message" id="message" placeholder="mensagem" data-message required>
+                    <label class="contact__label" for="message">Mensagem</label>
+                </div>
                 <button class="button button--green" type="submit" data-button>Enviar Mensagem</button>
             </form>
     </div>
@@ -254,6 +254,6 @@
         <p class="footer__subtitle">2023</p>
     </footer>
 
-    <script src="./assets/js/App.js"></script>
+    <script type="module" src="./assets/js/App.js"></script>
 </body>
 </html>
