--- a/index.html
+++ b/index.html
@@ -254,6 +254,6 @@
         <p class="footer__subtitle">2023</p>
     </footer>
 
-    <script type="module" src="./assets/js/App.js"></script>
+    <script src="./assets/js/App.js"></script>
 </body>
 </html>
