First test with thanks page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li class="main__item"><a  href="#" class="main__link" target="_blank">Curriculo</a></li>
                 </ul>
             </nav>
-    </div>
+        </div>
     </main>
     <section class="about" id="about">
         <h2 class="title">Sobre mim</h2>
@@ -244,6 +244,8 @@
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
                 <button class="button button--green" type="submit" data-button>Enviar Mensagem</button>
+                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html">
+                <input type="hidden" name="_subject" value="New submission!">
             </form>
     </div>
     </section>
@@ -253,7 +255,5 @@
         </p>
         <p class="footer__subtitle">2023</p>
     </footer>
-
-    <script src="./assets/js/App.js"></script>
 </body>
 </html>
