--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
                 <button class="button button--green" type="submit" data-button target="_next"></button>>Enviar Mensagem</button>
-                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html">
+                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
     </div>
