--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                     <input class="contact__input" type="text" name="message" id="message" placeholder="mensagem" data-message required>
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
-                <button class="button button--green" type="submit" data-button></button>>Enviar Mensagem</button>
-                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks">
+                <button class="button button--green" type="submit" data-button></button>Enviar Mensagem</button>
+                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
     </div>
