--- a/index.html
+++ b/index.html
@@ -226,24 +226,24 @@
             <p class="description">Quer entrar em contato comigo?<br>
                 Preencha o formulário ao lado e entrarei em contato o mais rápido possível.</p>
 
-            <form action="https://formsubmit.co/ajax/11c8702ee09bb86b0ffcded4f629c0eb" method="POST" data-form class="contact__form">
+                <form target="_blank" action="https://formsubmit.co/alex-vido.dev@outlook.com" method="POST">
                 <div class="contact__container">
-                    <input class="contact__input" type="text" name="name" id="name" placeholder="nome" data-name required>
+                    <input class="contact__input" type="text" name="name" id="name" placeholder="nome" required>
                     <label class="contact__label" for="name">Nome</label>
                 </div>
                 <div class="contact__container">
-                    <input class="contact__input" type="email" name="email" id="email" placeholder="email" data-email required>
+                    <input class="contact__input" type="email" name="email" id="email" placeholder="email" required>
                     <label class="contact__label" for="email">E-mail</label>
                 </div>
                 <div class="contact__container">
-                    <input class="contact__input" type="text" name="topic" id="topic" placeholder="assunto" data-topic required>
+                    <input class="contact__input" type="text" name="topic" id="topic" placeholder="assunto" required>
                     <label class="contact__label" for="topic">Assunto</label>
                 </div>
                 <div class="contact__container">
-                    <input class="contact__input" type="text" name="message" id="message" placeholder="mensagem" data-message required>
+                    <input class="contact__input" type="text" name="message" id="message" placeholder="mensagem" required>
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
-                <button class="button button--green" type="submit" data-button>Enviar Mensagem</button>
+                <button type="submit" class="button button--green">Submit Form</button>
                 <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
