Corrected text, added flaticon, added curriculum

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <!-- Icons -->
     <!-- <a href="https://www.flaticon.com/br/icones-gratis/seta-para-cima-direita" title="seta para cima direita ícones">Seta para cima direita ícones criados por Freepik - Flaticon</a> -->
     <!-- <a target="_blank" href="https://icons8.com/icon/106036/logotipo-javascript">Logotipo JavaScript</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
+    <link rel="shortcut icon" href="./assets/img/icons/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icons/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/icons/site.webmanifest">
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/normalize.css">
@@ -42,7 +47,7 @@
                 <li class="header__item"><a href="#hobbies" class="header__link">Hobbies</a></li>
                 <li class="header__item"><a href="#education" class="header__link">Formação</a></li>
                 <li class="header__item"><a href="#experience" class="header__link">Projetos</a></li>
-                <li class="header__item header__item--active"><a href="#contact" class="header__link header__link--active">alex-vido.dev@outlook.com</a></li>
+                <li class="header__item header__item--active"><a href="#contact" class="header__link header__link--active">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -50,19 +55,19 @@
         <div class="main__img"></div>
         <div class="main__container">
             <h1 class="title main__title">Olá, me chamo Alex Vido e construo páginas web</h1>
-            <h2 class="description main__description">Estudo programação web desde Maio de 2022, atualmente participo das formações web da Trybe da formação web Front-end da Oracle e Alura ONE.</h2>
+            <h2 class="description main__description">Estudo programação web desde Maio de 2022. Atualmente participo das formações web da Trybe da formação web Front-end da Oracle e Alura ONE.</h2>
             <nav class="main__nav">
                 <ul class="main__ul">
                     <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank">LinkedIn</a></li>
                     <li class="main__item"><a  href="https://github.com/alex-vido/" class="main__link" target="_blank">Github</a></li>
-                    <li class="main__item"><a  href="#" class="main__link" target="_blank">Curriculo</a></li>
+                    <li class="main__item"><a  href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank">Currículo</a></li>
                 </ul>
             </nav>
         </div>
     </main>
     <section class="about" id="about">
         <h2 class="title">Sobre mim</h2>
-        <p class="description"><b class="bold">Me chamo Alex, nascido em 1993.</b><br> Sou casado, tenho filhos, minha  família é tudo para mim e é impossível para mim me apresentar sem começar com essas palavras.<br>Desde pequeno sou apaixonado por tecnologia, esse interesse vem principalmente do meu pai que sempre amou tecnologia.<br> Desde que me conheço por gente, mexo com computador, desde a época em que as telas eram apenas em preto e branco, eu já jogava nelas.<br> Quando começou a internet discada, utilizava a internet com incríveis 16KB/s.<br> No meu último emprego estava prestes a conseguir uma promoção, e estava mergulhado de cabeça naquele emprego, e me vi na necessidade de cursar a faculdade da área e me dedicar à algo que nunca havia sonhado.<br> Com isso, em maio de 2022, após sair da empresa, com o total apoio da minha esposa, usei a maior parte do dinheiro que recebi e montei um computador apto para estudos.<br> Estudei tanto o Full-Stack, como Front-End e Back-End, pois queria saber qual eu gostaria mais de seguir minha vida profissional.<br>  Desde então vivo o sonho de aprender aquilo que sempre amei, e me apaixonei completamente primeiramente por CSS, em sequência por JavaScript e HTML.<br> Hoje estudo React, além de me aperfeiçoar na Tríade Front-End, e conhecendo novas maneiras de usar CSS, como SASS e Bootstrap.<br> Dedico completamente meus dias a aprender cada mais em busca da qualificação profissional e o tão sonhado primeiro emprego como desenvolvedor Front-End Web.</p>
+        <p class="description"><b class="bold">Me chamo Alex, nascido em 1993.</b><br> Sou casado, tenho filhos, minha família é tudo para mim e é impossível me apresentar sem começar com essas palavras.<br>Desde pequeno sou apaixonado por tecnologia, esse interesse vem principalmente do meu pai que sempre amou tecnologia.<br> Desde que me conheço por gente, mexo com computador, desde a época em que as telas eram apenas em preto e branco, eu já jogava nelas.<br> Quando começou a internet discada, utilizava a internet com incríveis 16KB/s.<br> No meu último emprego estava prestes a conseguir uma promoção, e estava mergulhado de cabeça naquele emprego, e me vi na necessidade de cursar a faculdade da área e me dedicar à algo que nunca havia sonhado.<br> Com isso, em maio de 2022, após sair da empresa, com o total apoio da minha esposa, usei a maior parte do dinheiro que recebi e montei um computador apto para estudos.<br> Estudei tanto o Full-Stack, como Front-End e Back-End, pois queria saber qual eu gostaria mais de seguir minha vida profissional.<br>  Desde então vivo o sonho de aprender aquilo que sempre amei, e me apaixonei completamente primeiramente por CSS, em sequência por JavaScript e HTML.<br> Hoje estudo React, além de me aperfeiçoar na Tríade Front-End, e conhecendo novas maneiras de usar CSS, como SASS e Bootstrap.<br> Dedico completamente meus dias a aprender cada vez mais em busca da qualificação profissional e o tão sonhado primeiro emprego como desenvolvedor Front-End Web.</p>
         <div class="about__signature"></div>
     </section>
     <section class="skills" id="skills">
@@ -140,18 +145,7 @@
                 <h4 class="subtitle">React</h4>
                 <p class="description">2023 - Udemy (Em progresso)</p>
             </div>
-            
-            <div class="education__container">
-                <div class="education__img education__img--udemy"></div>
-                <h4 class="subtitle">Python</h4>
-                <p class="description">2022 - Udemy (Não concluído)</p>
-            </div>
-            
-            <div class="education__container">
-                <div class="education__img education__img--udemy"></div>
-                <h4 class="subtitle">Django</h4>
-                <p class="description">2022 - Udemy (Não concluído)</p>
-            </div>
+
     </div>
     </section>
     <section class="experience" id="experience">
@@ -223,7 +217,7 @@
         <div class="contact__img"></div>
         <div class="container__external">
             <h3 class="title">Contato</h3>
-            <p class="description">Quer entrar em contato comigo?<br>
+            <p class="contact__description">Quer entrar em contato comigo?<br>
                 Preencha o formulário ao lado e entrarei em contato o mais rápido possível.</p>
 
                 <form target="_blank" action="https://formsubmit.co/alex-vido.dev@outlook.com" method="POST">
@@ -243,7 +237,7 @@
                     <input class="contact__input" type="text" name="message" id="message" placeholder="mensagem" required>
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
-                <button type="submit" class="button button--green">Submit Form</button>
+                <button type="submit" class="button button--green">Enviar formulário</button>
                 <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
