Added noreferrer noopener

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <h2 class="description main__description">Estudo programação web desde Maio de 2022. Atualmente participo das formações web da Trybe da formação web Front-end da Oracle e Alura ONE.</h2>
             <nav class="main__nav">
                 <ul class="main__ul">
-                    <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank">LinkedIn</a></li>
-                    <li class="main__item"><a  href="https://github.com/alex-vido/" class="main__link" target="_blank">Github</a></li>
-                    <li class="main__item"><a  href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank">Currículo</a></li>
+                    <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
+                    <li class="main__item"><a  href="https://github.com/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">Github</a></li>
+                    <li class="main__item"><a  href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank" rel="noreferrer noopener">Currículo</a></li>
                 </ul>
             </nav>
         </div>
@@ -157,8 +157,8 @@
                 <h4 class="subtitle">Kelly Maria Alfaiataria</h4>
                 <p class="description">Site criado para portfólio da Alfaiate Kelly.</p>
                 <div class="button__container">
-                    <a class="experience__link" href="https://github.com/alex-vido/kellymariaalfaiataria" target="_blank"><button class="button button--white">Repositório</button></a>
-                    <a  class="experience__link" href="https://kellymariaalfaiataria.com.br/" target="_blank"><button class="button button--green">Ver Página</button></a>  
+                    <a class="experience__link" href="https://github.com/alex-vido/kellymariaalfaiataria" target="_blank" rel="noreferrer noopener"><button class="button button--white">Repositório</button></a>
+                    <a  class="experience__link" href="https://kellymariaalfaiataria.com.br/" target="_blank" rel="noreferrer noopener"><button class="button button--green">Ver Página</button></a>  
                 </div>
             </div>
         </div>
@@ -169,8 +169,8 @@
                 <h4 class="subtitle">Social Tree</h4>
                 <p class="description">Desafio de criar uma árvore de redes sociais.</p>
                 <div class="button__container">
-                    <a class="experience__link" href="https://github.com/alex-vido/social-tree" target="_blank"><button class="button button--white">Repositório</button></a>
-                    <a class="experience__link" href="http://alexvido.com.br/" target="_blank"><button class="button button--green">Ver Página</button></a>
+                    <a class="experience__link" href="https://github.com/alex-vido/social-tree" target="_blank" rel="noreferrer noopener" ><button class="button button--white">Repositório</button></a>
+                    <a class="experience__link" href="http://alexvido.com.br/" target="_blank" rel="noreferrer noopener" ><button class="button button--green">Ver Página</button></a>
                 </div>
             </div>
         </div>
@@ -182,8 +182,8 @@
                 <h4 class="subtitle">ProWay Computers</h4>
                 <p class="description">E-Commerce feito com Angular com linguagem TypeScript.</p>
                 <div class="button__container">
-                    <a class="experience__link" href="https://github.com/alex-vido/proway-computers" target="_blank"><button class="button button--white">Repositório</button></a>
-                    <a class="experience__link" href="https://alex-vido.github.io/proway-computers/" target="_blank"><button class="button button--green">Ver Página</button></a>  
+                    <a class="experience__link" href="https://github.com/alex-vido/proway-computers" target="_blank" rel="noreferrer noopener"><button class="button button--white">Repositório</button></a>
+                    <a class="experience__link" href="https://alex-vido.github.io/proway-computers/" target="_blank" rel="noreferrer noopener"><button class="button button--green">Ver Página</button></a>  
                 </div>
             </div>
         </div>
@@ -194,8 +194,8 @@
                 <h4 class="subtitle">Barbearia Alura</h4>
                 <p class="description">Página de barbearia feito com HTML e CSS.</p>
                 <div class="button__container">
-                    <a class="experience__link" href="https://github.com/alex-vido/barbeariaalura" target="_blank"><button class="button button--white">Repositório</button></a>
-                    <a class="experience__link" href="https://alex-vido.github.io/barbeariaalura/" target="_blank"><button class="button button--green">Ver Página</button></a>
+                    <a class="experience__link" href="https://github.com/alex-vido/barbeariaalura" target="_blank" rel="noreferrer noopener"><button class="button button--white">Repositório</button></a>
+                    <a class="experience__link" href="https://alex-vido.github.io/barbeariaalura/" target="_blank" rel="noreferrer noopener"><button class="button button--green">Ver Página</button></a>
                 </div>
             </div>
         </div>
@@ -206,8 +206,8 @@
                 <h4 class="subtitle">Alura Challenge</h4>
                 <p class="description">Um challenge de criptografia e descriptografia de texto.</p>
                 <div class="button__container">
-                    <a class="experience__link" href="https://github.com/alex-vido/alurachallenge" target="_blank"><button class="button button--white">Repositório</button></a>
-                    <a class="experience__link" href="https://alex-vido.github.io/alurachallenge/" target="_blank"><button class="button button--green">Ver Página</button></a>
+                    <a class="experience__link" href="https://github.com/alex-vido/alurachallenge" target="_blank" rel="noreferrer noopener"><button class="button button--white">Repositório</button></a>
+                    <a class="experience__link" href="https://alex-vido.github.io/alurachallenge/" target="_blank" rel="noreferrer noopener"><button class="button button--green">Ver Página</button></a>
                 </div>
             </div>
         </div>
@@ -238,7 +238,7 @@
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
                 <button type="submit" class="button button--green">Enviar formulário</button>
-                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html">
+                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html" rel="noreferrer noopener">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
     </div>
