Corrected .education ctn added SASS and Bootstrap

--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@
                 <p class="description">2023 - Udemy (Em progresso)</p>
             </div>
 
+            <div class="education__container">
+                <div class="education__img education__img--udemy"></div>
+                <h4 class="subtitle">SASS</h4>
+                <p class="description">2023 - Udemy (Em progresso)</p>
+            </div>
+
+            <div class="education__container">
+                <div class="education__img education__img--udemy"></div>
+                <h4 class="subtitle">Bootstrap</h4>
+                <p class="description">2023 - Udemy (Em progresso)</p>
+            </div>
+
     </div>
     </section>
     <section class="experience" id="experience">
