Corrected text and link--active

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="container__external">
             <h3 class="title">Contato</h3>
             <p class="contact__description">Quer entrar em contato comigo?<br>
-                Preencha o formulário ao lado e entrarei em contato o mais rápido possível.</p>
+                Preencha o formulário abaixo e entrarei em contato o mais rápido possível.</p>
 
                 <form target="_blank" action="https://formsubmit.co/alex-vido.dev@outlook.com" method="POST">
                 <div class="contact__container">
