Corrected the thanks link

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <nav class="main__nav">
                 <ul class="main__ul">
                     <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
-                    <li class="main__item"><a  href="https://github.com/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">Github</a></li>
-                    <li class="main__item"><a  href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank" rel="noreferrer noopener">Currículo</a></li>
+                    <li class="main__item"><a href="https://github.com/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">Github</a></li>
+                    <li class="main__item"><a href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank" rel="noreferrer noopener">Currículo</a></li>
                 </ul>
             </nav>
         </div>
@@ -250,7 +250,7 @@
                     <label class="contact__label" for="message">Mensagem</label>
                 </div>
                 <button type="submit" class="button button--green">Enviar formulário</button>
-                <input type="hidden" name="_next" value="https://alex-vido.github.io/portfolio/thanks.html" rel="noreferrer noopener">
+                <input type="hidden" name="_next" value="https://alexvido.com.br/thanks.html" rel="noreferrer noopener">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
     </div>
