Replaced the email in form action

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <p class="contact__description">Quer entrar em contato comigo?<br>
                 Preencha o formulário abaixo e entrarei em contato o mais rápido possível.</p>
 
-                <form target="_blank" action="https://formsubmit.co/alex-vido.dev@outlook.com" method="POST">
+                <form target="_blank" action="https://formsubmit.co/11c8702ee09bb86b0ffcded4f629c0eb" method="POST">
                     
                 <div class="contact__container">
                     <input class="contact__input" type="text" name="name" id="name" placeholder="nome" required>
