Corrected the curriculum link in Thanks

--- a/thanks.html
+++ b/thanks.html
@@ -31,7 +31,7 @@
                 <ul class="main__ul">
                     <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank">LinkedIn</a></li>
                     <li class="main__item"><a  href="https://github.com/alex-vido/" class="main__link" target="_blank">Github</a></li>
-                    <li class="main__item"><a  href="#" class="main__link" target="_blank">Curriculo</a></li>
+                    <li class="main__item"><a  href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank">Curriculo</a></li>
                 </ul>
             </nav>
         </div>
