Corrected the name of Senai Course

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <div class="education__container">
                 <div class="education__img education__img--senai"></div>
-                <h4 class="subtitle">Tecnologia da Incontactação e Comunicação</h4>
+                <h4 class="subtitle">Tecnologia da Informação e Comunicação</h4>
                 <p class="description">2022 - Senai</p>
             </div>
 
