--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2 class="description main__description">Estudo programação web desde Maio de 2022. Atualmente participo das formações web da Trybe da formação web Front-end da Oracle e Alura ONE.</h2>
             <nav class="main__nav">
                 <ul class="main__ul">
-                    <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
+                    <li class="main__item"><a href="https://www.linkedin.com/in/alexvido/" class="main__link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
                     <li class="main__item"><a href="https://github.com/alex-vido/" class="main__link" target="_blank" rel="noreferrer noopener">Github</a></li>
                     <li class="main__item"><a href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank" rel="noreferrer noopener">Currículo</a></li>
                 </ul>
