--- a/thanks.html
+++ b/thanks.html
@@ -29,7 +29,7 @@
             <h2 class="description main__description">Muito obrigado pelo apoio. Embaixo está os links das minhas redes sociais e também meu curriculo.</h2>
             <nav class="main__nav">
                 <ul class="main__ul">
-                    <li class="main__item"><a href="https://www.linkedin.com/in/alex-vido/" class="main__link" target="_blank">LinkedIn</a></li>
+                    <li class="main__item"><a href="https://www.linkedin.com/in/alexvido/" class="main__link" target="_blank">LinkedIn</a></li>
                     <li class="main__item"><a  href="https://github.com/alex-vido/" class="main__link" target="_blank">Github</a></li>
                     <li class="main__item"><a  href="https://drive.google.com/file/d/1ImylP2IdtMFeLlRan6ZRa4jPd0X-j1eK/view" class="main__link" target="_blank">Curriculo</a></li>
                 </ul>
